...
        onTap: () {
          router.goNamed(RouteConstants.updatePassword);
        },
        child: Padding(
          padding: const EdgeInsets.all(8.0),
          child: Text(
            'Forgot password?',
            style: theme.textTheme.bodySmall?.copyWith(
              color: theme.colorScheme.outline,
            ),
          ),
        ),
      ),
...
  TextButton _buildRegistreButton(ThemeData theme) {
    return TextButton(
      onPressed: () {
        router.goNamed(RouteConstants.signup);
      },
      child: Text(
        'Register',
        style: theme.textTheme.bodyMedium?.copyWith(
          color: theme.colorScheme.primary,
        ),
      ),
    );
  }
...
