...
        _buildTab(
          theme: theme,
          title: 'Tasks',
        ),
        _buildTab(
          theme: theme,
          title: 'Notes',
        ),
        _buildTab(
          theme: theme,
          title: 'Documents',
        ),
      ],
      indicatorColor: theme.colorScheme.primaryContainer,
    );
  }

...
