...
                ),
              );
            },
            fetchMilestoneSuccess: (Roadmap roadmap) {
              return Scaffold(
                appBar: AppBar(
                  title: const Text('Milestones'),
                ),
                floatingActionButton:
                    roadmap.currentUserRole == MemberRole.guest.index + 1
                        ? null
                        : _buildFloatingActionButton(
                            context: context,
...
